--- a/AuthenticatorServer/requirements.txt
+++ b/AuthenticatorServer/requirements.txt
@@ -5,6 +5,7 @@ Flask-SocketIO==1.0
 Jinja2==2.8
 MarkupSafe==0.23
 Werkzeug==0.10.4
+apns==2.0.1
 itsdangerous==0.24
 python-engineio==0.7.2
 python-socketio==0.6.1
