--- a/AuthenticatorServer/requirements.txt
+++ b/AuthenticatorServer/requirements.txt
@@ -6,9 +6,16 @@ Jinja2==2.8
 MarkupSafe==0.23
 Werkzeug==0.10.4
 apns==2.0.1
+backports-abc==0.4
+backports.ssl-match-hostname==3.4.0.2
+certifi==2015.9.6.2
+gunicorn==19.3.0
 itsdangerous==0.24
 python-engineio==0.7.2
 python-socketio==0.6.1
 redis==2.10.5
+requests==2.8.1
+singledispatch==3.4.0.3
 six==1.10.0
+tornado==4.3
 wsgiref==0.1.2
